# solana-blacklist

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: deploy.yml
deploy/: deploy.sh  nginx.conf  setup-vps.sh  solana-blacklist-api.service  traefik-stack.yml  update.sh
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/: AppealLinks.tsx  BlacklistRow.tsx  BlacklistTable.tsx  EpochDetail.tsx  EpochList.tsx  ErrorBanner.tsx  Header.tsx  MeridianVoting.tsx  PubkeyCell.tsx  PubkeyLookup.tsx  SourceBadge.tsx  SourceFilter.tsx  SourcesPage.tsx  Spinner.tsx  Stars.tsx  StatsBar.tsx  StatusFilter.tsx  SuggestSource.tsx  TableSearch.tsx  ValidatorDetail.tsx  ValidatorsList.tsx
frontend/src/hooks/: useBlacklist.ts  useEpochDetail.ts  useEpochs.ts  usePubkeyLookup.ts  useSources.ts  useValidatorDetail.ts  useValidators.ts  useVoteDetail.ts  useVotes.ts
frontend/src/lib/: constants.ts  sourceColors.ts  sourceLinks.ts  truncate.ts
frontend/src/pages/: ApiDocsPage.tsx  EpochDetailPage.tsx  EpochsPage.tsx  HomePage.tsx  MeridianVotingPage.tsx  NotFoundPage.tsx  SourcesPageRoute.tsx  SuggestSourcePage.tsx  ValidatorDetailPage.tsx  ValidatorsPage.tsx
src/: blacklist.rs  blacklist_sources.json  lib.rs  meridian.rs  persistence.rs  utils.rs
src/sources/: hanabi.json  jito_blacklist.json  sandwiched_me.json  solana_sfdp_rejects.json
src/static/: meridian.html
