[package]
name = "solana_blacklist"
version = "0.0.1"
edition = "2024"
publish = false

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
anyhow = "1"
csv = "1.3"
futures = "0.3"
jsonpath_lib = "0.3"
reqwest = { version = "0.13.2", features = ["json", "gzip", "deflate", "brotli", "zstd", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
