[package]
name = "solana_blacklist"
version = "0.0.1"
edition = "2024"
publish = false

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
anyhow = "1"
csv = "1.3"
futures = "0.3"
jsonpath_lib = "0.3"
reqwest = { version = "0.13.2", features = ["json", "gzip", "deflate", "brotli", "zstd", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
